[workspace]
members = ["dkg", "store"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["448-OG <superuser@448.africa>"]
edition = "2024"
license = "AGPL-3.0"
description = ""
readme = ""
homepage = ""
repository = ""
categories = []
keywords = []

[workspace.dependencies]
tai64 = "=4.1.0"
thiserror = { version = "=2.0.18", default-features = false }
bitcode = "=0.6.7"
async-dup = "=1.2.4"
async-lock = "=3.4.2"
async-channel = "=2.5.0"
blake3 = { version = "=1.8.4", default-features = false, features = [
    "wasm32_simd",
    "zeroize",
] }
smol = "=2.0.2"
rand = "=0.8"
rand_chacha = { version = "=0.9", features = ["os_rng"] }
camino = "=1.2.2"
blocking = "=1.6.2"
fjall = { version = "=3.0.1", default-features = false }
zeroize = { version = "=1.8.2", default-features = false }
redb = "=4.0.0"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
