[workspace]
members = ["dkg", "store", "types"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["448-OG <superuser@448.africa>"]
edition = "2024"
license = "AGPL-3.0"
description = ""
readme = ""
homepage = ""
repository = ""
categories = []
keywords = []

[workspace.dependencies]
frost-dkg-types = { path = "./types" }
frost-dkg-ops = { path = "./dkg" }
thiserror = { version = "=2.0.18", default-features = false }
bitcode = { version = "=0.6.7", default-features = false, features = [
    "std",
    "derive",
] }
blake3 = { version = "=1.8.4", default-features = false, features = [
    "wasm32_simd",
    "zeroize",
] }
rand = "=0.8"
rand_chacha = { version = "=0.9", features = ["os_rng"] }
fjall = { version = "=3.0.1", default-features = false }
zeroize = { version = "=1.8.2", default-features = false }
redb = "=4.0.0"
frost-ed25519 = { version = "=3.0.0", default-features = false, features = [
    "serialization",
] }
frost-core = { version = "=3.0.0", default-features = false, features = [
    "internals",
    "serialization",
] }
faster-hex = { version = "=0.10.0", default-features = false, features = [
    "alloc",
] }
subtle = { version = "=2.6.1", default-features = false, features = [
    "const-generics",
] }
curve25519-dalek = "=4.1.3"
email_address = { version = "=0.2.9", default-features = false }
ed25519-dalek = "=2.2.0"
tai64 = { version = "=4.1.0", default-features = false, features = [
    "std",
    "zeroize",
] }
camino = "1.2.2"
blocking = "1.6.2"
async-dup = "1.2.4"
smol = "=2.0.2"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
