[workspace]
members = ["dkg", "store", "types"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["448-OG <superuser@448.africa>"]
edition = "2024"
license = "AGPL-3.0"
description = ""
readme = ""
homepage = ""
repository = ""
categories = []
keywords = []

[workspace.dependencies]
frost-dkg-types = { path = "./types" }
frost-store-ops = { path = "./store" }
frost-dkg-ops = { path = "./dkg" }
thiserror = { version = "=2.0.18", default-features = false }
bitcode = { version = "=0.6.9", default-features = false, features = [
    "std",
    "derive",
] }
blake3 = { version = "=1.8.5", default-features = false, features = [
    "wasm32_simd",
    "zeroize",
] }
rand = "=0.8"
rand_chacha = { version = "=0.10.0", features = [] }
getrandom = { version = "=0.4.2", features = ["sys_rng"] }
zeroize = { version = "=1.8.2", default-features = false }
redb = "=4.1.0"
frost-ed25519 = { version = "=3.0.0", default-features = false, features = [
    "serialization",
] }
frost-core = { version = "=3.0.0", default-features = false, features = [
    "internals",
    "serialization",
] }
faster-hex = { version = "=0.10.0", default-features = false, features = [
    "alloc",
] }
subtle = { version = "=2.6.1", default-features = false, features = [
    "const-generics",
] }
email_address = { version = "=0.2.9", default-features = false }
tai64 = { version = "=4.1.0", default-features = false, features = [
    "std",
    "zeroize",
] }
camino = "=1.2.2"
blocking = "=1.6.2"
async-dup = "=1.2.4"
async-lock = "=3.4.2"
smol = "=2.0.2"
fqdn = { version = "=0.5.2", features = ["punycode"] }
humantime = "=2.3.0"
bs58 = "=0.5.1"
file-format = { version = "=0.29.0", features = [
    "reader-mp4",
    "reader-ebml",
    "reader-id3v2",
    "reader-zip",
    "reader-pdf",
] }
ed25519-dalek = { version = "=2.2.0", default-features = false, features = [
    "fast",
    "signature",
] }


[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
