[package]
name = "frost-dkg-ops"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["ed25519"]
ed25519 = ["dep:frost-ed25519"]

[dependencies]
frost-ed25519 = { version = "=3.0.0-rc.0", default-features = false, features = [
    "serialization",
], optional = true }
frost-core = { version = "=3.0.0-rc.0", default-features = false, features = [
    "internals",
    "serialization",
] }

bitcode.workspace = true
zeroize = { workspace = true }
thiserror = { workspace = true, default-features = false }
faster-hex = { version = "0.10.0", default-features = false, features = [
    "alloc",
] }
rand_chacha.workspace = true
subtle = { version = "2.6.1", default-features = false, features = [
    "const-generics",
] }
email_address = { version = "0.2.9", default-features = false }
redb.workspace = true
rand.workspace = true
blake3.workspace = true
curve25519-dalek = "=4.1.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
zeroize = { workspace = true, features = ["aarch64", "simd"] }

[dev-dependencies]
