[package]
name = "frost-dkg-ops"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]

[dependencies]
frost-dkg-types.workspace = true

frost-core = { workspace = true, default-features = false, features = [
    "internals",
    "serialization",
] }
redb = { workspace = true, optional = true }


bitcode = { workspace = true, features = ["serde"] }
zeroize = { workspace = true }
thiserror = { workspace = true, default-features = false }
faster-hex.workspace = true
subtle.workspace = true
email_address.workspace = true
rand.workspace = true
blake3.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
zeroize = { workspace = true, features = ["aarch64", "simd"] }

[dev-dependencies]
async-dup.workspace = true
async-lock.workspace = true
frost-ed25519 = { workspace = true, default-features = false, features = [
    "serialization",
] }
smol = "=2.0.2"
