[package]
name = "frost-store-ops"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["client"]
relay = ["dep:fjall"]
client = ["dep:redb"]

[dependencies]
frost-dkg-types.workspace = true
fjall = { workspace = true, optional = true }
redb = { workspace = true, optional = true }
camino.workspace = true
blocking.workspace = true
async-dup.workspace = true
bitcode.workspace = true
bitcode.default-features = false
frost-core.workspace = true

[dev-dependencies]
frost-ed25519.workspace = true
rand.workspace = true
smol.workspace = true
