[package]
name = "frost-store-ops"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]

[dependencies]
frost-dkg-types = { workspace = true, features = ["full"] }
redb.workspace = true
camino.workspace = true
blocking.workspace = true
async-dup.workspace = true
bitcode.workspace = true
bitcode.default-features = false
frost-core.workspace = true

[dev-dependencies]
frost-ed25519.workspace = true
rand.workspace = true
smol.workspace = true
