[package]
name = "frost-dkg-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["client_storage", "email"]
client_storage = ["dep:redb"]
email = ["dep:email_address"]

[dependencies]
frost-core = { workspace = true, default-features = false, features = [
    "internals",
    "serialization",
] }
redb = { workspace = true, optional = true }
bitcode = { workspace = true, features = ["serde"] }
zeroize = { workspace = true }
thiserror = { workspace = true, default-features = false }
faster-hex.workspace = true
rand_chacha.workspace = true
getrandom.workspace = true
subtle.workspace = true
email_address = { workspace = true, optional = true }
tai64.workspace = true
rand.workspace = true
blake3.workspace = true
hpke-rs = { version = "=0.6.1", features = ["rustcrypto", "serialization"] }
hpke-rs-crypto = "=0.6.1"
hpke-rs-rust-crypto = "=0.6.1"
fqdn.workspace = true
humantime.workspace = true
bs58.workspace = true
file-format.workspace = true
ed25519-dalek.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
zeroize = { workspace = true, features = ["aarch64", "simd"] }

[dev-dependencies]
frost-ed25519 = { workspace = true, default-features = false, features = [
    "serialization",
] }
